--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
-      name="description"
+      name="currency-converter"
       content="Web site created using create-react-app"
     />
     <title>Converter</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
