--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="currency-converter"
-      content="Web site created using create-react-app"
-    />
-    <title>Converter</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="currency-converter" content="Web site created using create-react-app" />
+    <link rel="icon" href="%PUBLIC_URL%/bitcoin.ico" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/bitcoin.ico" />
+    <link rel="manifest" href="manifest.json">
+  <title>Crypto-Converter</title>
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
+
 </html>
