--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <meta name="currency-converter" content="Web site created using create-react-app" />
+adyghe  <meta name="currency-converter" content="Web site created using create-react-app" />
   <link rel="icon" href="%PUBLIC_URL%/bitcoin.ico" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/bitcoin.ico" />
   <link rel="manifest" href="manifest.json">
