--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="%PUBLIC_URL%/bitcoin.ico" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/bitcoin.ico" />
   <link rel="manifest" href="manifest.json">
-  <title>Crypto-Converter</title>
+  <title>Crypto-Currencies</title>
 </head>
 
 <body>
